k8s/samples/sample-sa-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-sa-pod
  namespace: default
spec:
  serviceAccountName: sample-serviceaccount
  containers:
    - name: nginx-container
      image: nginx:1.16
