k8s/samples/sample-externalname.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-externalname
spec:
  type: ExternalName
  externalName: www.google.com
