k8s/samples/sample-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-loadbalancer
spec:
  type: LoadBalancer
  ports:
    - name: http-port
      port: 8080
      protocol: TCP
      targetPort: 80
      nodePort: 30082
  selector:
    app: sample-app
