k8s/samples/sample-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: sample-networkpolicy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: sample-app
  policyTypes:
    - Ingress
    - Egress
    ingress:
      - from:
